regression_tests/snap/check/testim3/testim3.err
================================================================================

                      PROGRAM SNAP  Version 2.7.11-69b80b7

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Aug 22 2018 13:56:33

================================================================================
                     Run at 24-AUG-2018 06:39:21 by ccrook




================================================================================
                                                            24-AUG-2018 06:39:21

                                 ERROR SUMMARY

================================================================================

Error: Invalid target station code "1"
       Line: 12  File: testim1.dat

Error: Invalid target station code "B"
       Line: 13  File: testim1.dat

Error: Invalid target station code "QQ"
       Line: 15  File: testim1.dat

Error: Invalid target station code "C_100"
       Line: 16  File: testim1.dat

Error: Invalid target station code "1"
       Line: 35  File: testim1.dat

Error: Invalid target station code "B"
       Line: 36  File: testim1.dat

Error: Invalid target station code "QQ"
       Line: 38  File: testim1.dat

Error: Invalid target station code "C_100"
       Line: 39  File: testim1.dat

Error: 8 errors reported reading the data files
